@@ -10,6 +10,7 @@
 *.swp
 *.tmp
 .DS_Store
+.vstags
 
 # avoid utility files
 .build
