@@ -1,6 +1,7 @@
 Revision history for VMware-vCloudDirector
 
 {{$NEXT}}
+    - Slightly improved error handling - decodes vCloud response better
 
 0.006     2017-06-30 11:57:33+01:00 Europe/London
     - Require at least version 0.04 of Syntax::Keyword::Try
